basic_garage db

--- a/resources/[zRP]/zrp_interface/Pages/garage/index.html
+++ b/resources/[zRP]/zrp_interface/Pages/garage/index.html
@@ -9,5 +9,13 @@
     <script src = "JS/index.js" rel = "script" type = "text/javascript"></script>
 </head>
 <body>
+    <div class = "container-fluid">
+        <div class = "container">
+            <header>Garagem</header>
+            <article>
+                <iframe src = "cars.html"></iframe>
+            </article>
+        </div>
+    </div>
 </body>
 </html>
