--- a/resources/[zRP]/zrp_interface/Pages/veh_sealer/cars.html
+++ b/resources/[zRP]/zrp_interface/Pages/veh_sealer/cars.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class = "row" id = "car-list"
+        <div class = "row" id = "car-list">
         </div>
     </div>
     <script src="JS/cars.js" rel = "script" type="text/javascript"></script>
