--- a/resources/[zRP]/zrp_interface/Pages/index.html
+++ b/resources/[zRP]/zrp_interface/Pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Marmota</title>
+    <title>zRP</title>
     <style type="text/css">
         body
         {
